Sorted layout issue

--- a/css/main.css
+++ b/css/main.css
@@ -711,7 +711,7 @@ footer {
   @media screen and (min-width: 600px) {
     .about-hero .abouthero-textgroup {
       position: absolute;
-      top: 39%;
+      top: 46%;
       left: 20%;
       width: 355px; } }
   @media screen and (min-width: 1000px) {
@@ -917,7 +917,7 @@ footer {
   @media screen and (min-width: 600px) {
     .contact-hero .contacthero-textgroup {
       position: absolute;
-      top: 39%;
+      top: 46%;
       left: 20%;
       width: 355px; } }
   @media screen and (min-width: 1000px) {
