--- a/sass/layout/_about-hero.scss
+++ b/sass/layout/_about-hero.scss
@@ -50,7 +50,7 @@
 
         @include respond(tablet){ //600px
             position: absolute;
-            top: 39%;
+            top: 46%;
             left: 20%;
             width: 355px;
         }
